--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         function updateDisplay(verse) {
             verse = verse.replace(" ", "");
             verse = verse.toLowerCase();
-            let url = verse + '.txt';
+            let url = 'https://github.com/sebastienlob/AJAX/blob/master/' + verse + '.txt';
             let request = new XMLHttpRequest();
             request.open('GET', url);
             request.responseType = 'text';
