--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         function updateDisplay(verse) {
             verse = verse.replace(" ", "");
             verse = verse.toLowerCase();
-            let url = 'https://github.com/sebastienlob/AJAX/blob/master/' + verse + '.txt';
+            let url =  verse + '.txt';
             let request = new XMLHttpRequest();
             request.open('GET', url);
-            request.responseType = 'text';
+            request.responseType = 'blob';
             request.onload = function() {
                 poemDisplay.textContent = request.response;
             };  
