--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             let url =  verse + '.txt';
             let request = new XMLHttpRequest();
             request.open('GET', url);
-            request.responseType = 'blob';
+            request.responseType = 'text';
             request.onload = function() {
                 poemDisplay.textContent = request.response;
             };  
