--- a/index.html
+++ b/index.html
@@ -2,88 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width">
-
-    <title>Ajax starting point</title>
-
-    <style>
-      html, pre {
-        font-family: sans-serif;
-      }
-
-      body {
-        width: 500px;
-        margin: 0 auto;
-        background-color: #ccc;
-      }
-
-      pre {
-        line-height: 1.5;
-        letter-spacing: 0.05rem;
-        padding: 1rem;
-        background-color: white;
-      }
-
-      label {
-        width: 200px;
-        margin-right: 33px;
-      }
-
-      select {
-        width: 350px;
-        padding: 5px;
-      }
-
-    </style>
+    <title>The Can Store</title>
+    <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
+    <link href="can-style.css" rel="stylesheet">
     <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
 
   <body>
-    <h1>Ajax starting point</h1>
+    <header>
+      <h1>The Can Store</h1>
+    </header>
+    <div>
+      <aside>
+        <form>
+          <div>
+            <label for="category">Choose a category:</label>
+            <select id="category">
+              <option selected>All</option>
+              <option>Vegetables</option>
+              <option>Meat</option>
+              <option>Soup</option>
+            </select>
+          </div>
+          <div>
+            <label for="searchTerm">Enter search term:</label>
+            <input type="text" id="searchTerm" placeholder="e.g. beans">
+          </div>
+          <div>
+            <button>Filter results</button>
+          </div>
+        </form>
+      </aside>
+      <main>
 
-    <form>
-      <label for="verse-choose">Choose a verse</label>
-      <select id="verse-choose" name="verse-choose">
-        <option>Verse 1</option>
-        <option>Verse 2</option>
-        <option>Verse 3</option>
-        <option>Verse 4</option>
-      </select>
-    </form>
+      </main>
+    </div>
+    <footer>
+      <p>All icons found at the Noun Project:</p>
 
-    <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843</em></h2>
-
-    <pre>
-
-    </pre>
-
-    <script>
-        const verseChoose = document.querySelector('select');
-        const poemDisplay = document.querySelector('pre');
-
-        verseChoose.onchange = function() {
-        const verse = verseChoose.value;
-        updateDisplay(verse);
-        };
-
-        function updateDisplay(verse) {
-            verse = verse.replace(" ", "");
-            verse = verse.toLowerCase();
-            let url =  verse + '.txt';
-            let request = new XMLHttpRequest();
-            request.open('GET', url);
-            request.responseType = 'text';
-            request.onload = function() {
-                poemDisplay.textContent = request.response;
-            };  
-            request.send();
-        };
-        updateDisplay('Verse 1');
-        verseChoose.value = 'Verse 1';
-        
-    </script>
+      <ul>
+        <li>Bean can icon by <a href="https://thenounproject.com/yalanis/">Yazmin Alanis</a></li>
+        <li>Vegetable icon by <a href="https://thenounproject.com/skatakila/">Ricardo Moreira</a></li>
+        <li>Soup icon by <a href="https://thenounproject.com/ArtZ91/">Arthur Shlain</a></li>
+        <li>Meat Chunk icon by <a href="https://thenounproject.com/smashicons/">Oliviu Stoian</a>.</li>
+      </ul>
+    </footer>
+    <script src="can-script.js"></script>
   </body>
 </html>
